--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,27 @@
  * # base style overrides
  *
  * ------------------------------------------------------------------- */
+
+.my-0 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.font-weight-bold {
+  font-weight: 700;
+}
+
+.pswp__caption h4 {
+  font-size: 3rem;
+  margin-bottom: 15px;
+}
+
+.pswp__caption__center {
+  color: rgba(255, 255, 255, 0.772);
+  font-size: 2rem;
+  line-height: 25px;
+}
+
 html {
   font-size: 10px;
 }
@@ -81,7 +102,7 @@ body {
   font-style: normal;
   font-weight: normal;
   line-height: 1.941;
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.57);
   margin: 0;
   padding: 0;
 }
@@ -191,7 +212,7 @@ p.lead {
   font-size: 2.4rem;
   line-height: 1.625;
   margin-bottom: 3.6rem;
-  color: rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.499);
 }
 
 @media only screen and (max-width:1200px) {
