--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,43 @@
   font-weight: 600;
 }
 
+.home-title {
+  font-size: 80px !important;
+  line-height: 100px !important;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 1250px) {
+  .home-title {
+    font-size: 70px !important;
+    line-height: 85px !important;
+
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .home-title {
+    font-size: 60px !important;
+    line-height: 85px !important;
+
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .home-title {
+    font-size: 50px !important;
+    line-height: 70px !important;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .home-title {
+    font-size: 40px !important;
+    line-height: 60px !important;
+  }
+}
+
+
 html {
   font-size: 10px;
 }
