--- a/css/main.css
+++ b/css/main.css
@@ -3284,7 +3284,7 @@ html.no-csstransitions .home-content__main {
 @media only screen and (max-width:1000px) {
   .s-works {
     padding-top: 15rem;
-    padding-bottom: 15rem;
+    padding-bottom: 30px;
   }
 
 }
